fix: remove html overflow hide

--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -2,10 +2,6 @@
  * Room Styling
  */
 
-html {
-  overflow: hidden;
-}
-
 /* Room Name Group - Component-specific overrides */
 .room-name-group {
   width: fit-content;
